tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/start-dot.stderr
TOML parse error at line 1, column 1
  |
1 | .key = 1
  | ^
invalid key
